fix: resolve test compilation errors for EngineType and method ambiguity
Fix compilation errors in orchestrator test files:
- Use EngineType enum instead of String in test setup
- Fix ambiguous retryIfPossible calls (use entity overload)
- Fix Iterable.size() to convert to List first
- Update all tests to use EngineType.STATIC_ANALYSIS

All tests now compile successfully.